<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_IMEI"
        android:layout_width="269dp"
        android:layout_height="36dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="80dp"
        android:text="@string/IMEI_string"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonGetImei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:onClick="GetIMEI"
        android:text="@string/Consultar_IMEI_button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginStart="392dp"
        android:layout_marginTop="104dp"
        android:onClick="send"
        android:text="@string/Enviar_IMEI"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonGetImei" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/IP"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonGetImei" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="166dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/IMEI_Data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonGetImei" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="358dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/IP_enviar_dato"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="App version"
        app:layout_constraintStart_toEndOf="@+id/ButtonGetImei"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>